# uos-ai

./: .gitignore  CMakeLists.txt  Doxyfile  install_dconfig.cmake  linglong.yaml  translate_generation.sh
ocr/: CMakeLists.txt  ocr_process.cpp
plugin-aibar/: CMakeLists.txt  aibar.cpp  aibar.h  aibarconfig.cpp  aibarconfig.h  audiointerface.cpp  audiointerface.h  dconfigmanager.cpp  dconfigmanager.h  dconfigmanager_p.h  dragmonitor.cpp  dragmonitor.h  meetingassistant.cpp  meetingassistant.h  meetingmonitor.cpp  meetingmonitor.h  resource.qrc  uosaiinterface.cpp  uosaiinterface.h
plugin-aibar/package/: DocDroparea.qml  DocumentToast.qml  MeetingToast.qml  main.qml  metadata.json
plugin-aibar/report/: aibarpoint.h  basicpoint.cpp  basicpoint.h  committhread.cpp  eventlogutil.cpp  uosai_global.h
plugin-aibar/translations/: org.deepin.ds.dock.aibar.ts  org.deepin.ds.dock.aibar_az.ts  org.deepin.ds.dock.aibar_bo.ts  org.deepin.ds.dock.aibar_ca.ts  org.deepin.ds.dock.aibar_es.ts  org.deepin.ds.dock.aibar_fi.ts  org.deepin.ds.dock.aibar_fr.ts  org.deepin.ds.dock.aibar_hu.ts  org.deepin.ds.dock.aibar_it.ts  org.deepin.ds.dock.aibar_ja.ts  org.deepin.ds.dock.aibar_ko.ts  org.deepin.ds.dock.aibar_nb_NO.ts  org.deepin.ds.dock.aibar_pl.ts  org.deepin.ds.dock.aibar_pt_BR.ts  org.deepin.ds.dock.aibar_ru.ts  org.deepin.ds.dock.aibar_uk.ts  org.deepin.ds.dock.aibar_zh_CN.ts  org.deepin.ds.dock.aibar_zh_HK.ts  org.deepin.ds.dock.aibar_zh_TW.ts
plugin-fcitx/fcitx4/: CMakeLists.txt  bus.cpp  bus.h  common.h  config.cpp  config.h.in  eim.cpp  eim.h  fcitx-uosai.conf.in  fcitx-uosai.desc  uosaiplugin.conf.in
plugin-fcitx/fcitx5/: CMakeLists.txt  uosai.conf  uosai.conf.in  uosai.conf.in.in  uosai.cpp  uosai.h
plugin-model/fydn/: CMakeLists.txt  fydnnetwork.cpp  fydnnetwork.h  fydnplugin.cpp  fydnplugin.h  zgfyllm.cpp  zgfyllm.h
plugin-model/yzsbs/: CMakeLists.txt  yzsbsllm.cpp  yzsbsllm.h  yzsbsplugin.cpp  yzsbsplugin.h
plugin-settings/: CMakeLists.txt  resources.qrc
plugin-tray/: CMakeLists.txt  uosaiplugin.cpp  uosaiplugin.h  uosaiwidget.cpp  uosaiwidget.h
shortcuts/: CMakeLists.txt
shortcuts/cmake/: DdeShortcutI18n.cmake
shortcuts/configs/: org.deepin.dde.shortcut.ai.ini
shortcuts/tools/: extract_shortcuts_i18n.py
shortcuts/translations/: org.deepin.dde.shortcut.ai.ts  org.deepin.dde.shortcut.ai_zh_CN.ts
src/: CMakeLists.txt  application.cpp  application.h  global_define.h  global_key_define.h  logcategory.cpp  main.cpp  resources.qrc  web.qrc
src/agent/: CMakeLists.txt  agent.cpp  agent.h  agentfactory.cpp  agentfactory.h  agentstep.h  appagent.cpp  appagent.h  defaultagent.cpp  defaultagent.h  defaultagentwithskills.cpp  defaultagentwithskills.h  defaultmcpserver.cpp  icompents.h  llmagent.cpp  llmagent.h  mcpagent.cpp  mcpagent.h  mcpchatagent.cpp  mcpchatagent.h  mcpclient.cpp  mcpclient.h  mcpconfigsyncer.cpp  mcpconfigsyncer.h  mcpserver.cpp  mcpserver.h  oaifunctionparser.cpp  oaifunctionparser.h  reasoninguse.cpp  reasoninguse.h  skillsmanager.cpp  skillsmanager.h  toolparser.cpp  toolparser.h  tooluse.cpp  tooluse.h
src/app/: application.cpp  application.h  global_define.cpp  logcategory.cpp  serverwrapper.cpp  serverwrapper.h
src/assistant/: abstractassistant.cpp  abstractassistant.h  aitranslation.cpp  aitranslation.h  aiwriter.cpp  aiwriter.h  assistantinfo.h  assistantmanager.cpp  assistantmanager.h  chatassistant.cpp  chatassistant.h  personalknowledgeassistant.cpp  personalknowledgeassistant.h  uosaiaassistant.cpp  uosaiaassistant.h  uosclaw.cpp  uosclaw.h
src/audio/: audiocontroler.cpp  audiocontroler.h  audioplayerstream.cpp  audioplayerstream.h  audiorecorder.cpp  audiorecorder.h  pgsparser.h
src/audiowizard/: audioaiassistant.cpp  audioaiassistant.h  audioaiassistant_p.h
src/chatbot/: channelmanager.cpp  channelmanager.h  chatbot_key_define.h  chatbotagent.cpp  chatbotagent.h  chatbotassistant.cpp  chatbotassistant.h  chatbotcommandhandler.cpp  chatbotcommandhandler.h  chatbotconfig.cpp  chatbotconfig.h  chatbotpaths.cpp  chatbotpaths.h  chatbotpayload.cpp  chatbotpayload.h  chatbotrequesthandler.cpp  chatbotrequesthandler.h  chatbotrequestprocessor.cpp  chatbotrequestprocessor.h  chatbotservice.cpp  chatbotservice.h  chatmemory.cpp  chatmemory.h
src/conversation/: conversationindex.cpp  conversationindex.h  conversationmanager.cpp  conversationmanager.h  conversationrecord.cpp  conversationrecord.h  conversationsearch.cpp  conversationsearch.h  messagenode.cpp  messagenode.h
src/database/: appconfigtable.cpp  appconfigtable.h  appdatabase.cpp  appdatabase.h  dbtable.h  knowledgebasemanager.cpp  modelstable.cpp  modelstable.h  providertable.cpp  providertable.h  sqlitebase.cpp  sqlitebase.h  usedmodeltable.cpp  usedmodeltable.h
src/datamigration/: configmigration.cpp  configmigration.h  conversationmigration.cpp  conversationmigration.h  llmmigration.cpp  llmmigration.h  migration.h  migrationmanager.cpp  migrationmanager.h  migrationmanager3.cpp  migrationmanager3.h
src/dbs/: dbwrapper.cpp  dbwrapper.h  knowledgebasemanager.cpp  knowledgebasemanager.h
src/dbus/: appdbusobject.cpp  appdbusobject.h  audiodbusinterface.cpp  audiodbusinterface.h  browswenativedbusobject.cpp  browswenativedbusobject.h  cdbuspendingcallwatcher.cpp  cdbuspendingcallwatcher.h  chatdbusinterface.cpp  chatdbusinterface.h  dbuscontrolcenterrequest.cpp  dbuscontrolcenterrequest.h  dbusinterface.cpp  dbusinterface.h  dbuslocalspeechrecognitionrequest.cpp  dbuslocalspeechrecognitionrequest.h  dbuslocaltexttoimagerequest.cpp  dbuslocaltexttoimagerequest.h  dbusrequestbase.cpp  dbusrequestbase.h  ddedockobject.cpp  ddedockobject.h  embeddingserver.cpp  embeddingserver.h  fcitxinputserver.cpp  fcitxinputserver.h  localmodelserver.cpp  localmodelserver.h  networkmonitor.cpp  networkmonitor.h  shortcutmanager.cpp  shortcutmanager.h
src/externalllm/: exteralllm.cpp  exteralllm.h  exteralllmloader.cpp  exteralllmloader.h  exteralllmloader_p.h  externalagent.cpp  externalagent.h  externalagentloader.cpp  externalagentloader.h  externalllm.cpp  externalllm.h  (+9 more)
(+1394 files in other folders)
